Minor cleanup - delete unused params and methods, etc